--- a/src/Resume/wwwroot/index.html
+++ b/src/Resume/wwwroot/index.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Curriculum Vitae">
+    <meta name="author" content="Daniel Cook">
 
-    <title>Clean Blog</title>
+    <title>Daniel Cook CV</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="libs/css/bootstrap.min.css" rel="stylesheet">
