Added isnull pipe for date display

--- a/src/Resume/wwwroot/index.html
+++ b/src/Resume/wwwroot/index.html
@@ -50,7 +50,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://uk.linkedin.com/in/daniel-cook-938529110">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
