--- a/src/Resume/wwwroot/index.html
+++ b/src/Resume/wwwroot/index.html
@@ -37,7 +37,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
