Added jasmine unit tests

--- a/src/Resume/wwwroot/index.html
+++ b/src/Resume/wwwroot/index.html
@@ -16,7 +16,9 @@
     <link href="libs/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <link href="css/timeline.css" rel="stylesheet">
     <link href="css/clean-blog.css" rel="stylesheet">
+    
 
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -74,10 +76,10 @@
 
     <script src="libs/jquery.js"></script>
     <script src="libs/bootstrap.min.js"></script>
-    <script src="libs/es6-shim.min.js"></script>
-    <script src="libs/system-polyfills.js"></script>
+    <script src="libs/es6-shim.min.js"></script>    
     <script src="libs/shims_for_IE.js"></script>
     <script src="libs/angular2-polyfills.js"></script>
+    <script src="libs/system-polyfills.js"></script>
     <script src="libs/system.src.js"></script>
     <script src="libs/Rx.js"></script>
     <script src="libs/angular2.dev.js"></script>
